--- a/style.css
+++ b/style.css
@@ -394,6 +394,11 @@ video {
 
 
  @media (max-width: 800px) {
+  html,body{
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+  }
     nav{
         flex-direction: column;
         align-items: flex-start;
@@ -402,13 +407,23 @@ video {
         text-decoration: none;
         /* color:  #450003; */
         color: #b23e68;
-        font-size: 18px;
+        font-size: 20px;
         font-weight: 1200;
         padding: 2px;
         
     }
+   
+    a:hover{
+      padding: 0;
+      border-radius: 0; 
+      box-shadow: none;
+      background-color:none;
+      border: none;
+      color: olive;
+    
+      transition: all 0.1s ease-out;
+  }
     .dropdown{
-    background-color: #450003;
     position: absolute;
     top: 8.3rem;
     right: 0.1rem;
@@ -417,6 +432,8 @@ video {
     }
     ul li:hover ul.dropdown{
         display: block;
+        padding: 20px;
+        background-color: none;
     }
    
     .toggle-button {
@@ -447,9 +464,26 @@ video {
         display: flex;
     
 }
+.dropdown{
+  background-color:none;
+  position: absolute;
+  top: 3rem;
+  right: 0.2rem;
+  z-index: 99;
+  display: none;
+}
 
 ul li:hover ul.dropdown{
     display: block;
+}
+.dropdown a:hover{
+  background-color: none;
+  padding: 6px;
+  border-radius: 5px; 
+  box-shadow:none;
+  border: 2px solid  #d21d5c;
+  color: black;
+  transition: all 0.1s ease-out;
 }
 
 section{
@@ -459,6 +493,7 @@ section{
   height: 450px;
   width:  450px;
   border-radius:50%;
+  max-width :100% 
 
 }
 section video{
@@ -490,15 +525,36 @@ section video{
   border-radius: 1rem;
   width: 200px;
   cursor: pointer;
- background-color: #450003;
+
  color: #b23e68;
 font-size: 18px;
 font-weight: 900;
 }
+.resume a{
+  position: absolute;
+  text-align: center;
+  top: 6rem;
+  right: 22rem;
+  padding: 1.2rem;
+  border: none;
+  border-radius: 1rem;
+  width: 200px;
+  cursor: pointer;
+ background-color: #450003;
+ color: #b23e68;
+font-size: 18px;
+font-weight: 900;
+font-family: 'Segoe UI', sans-serif;
+}
+.resume a:hover{
+  color: black;
+  background-color: #d21d5c;
+}
+
 button{
   position: relative;
   top:10rem;
-  right: 20rem;
+  right: 22rem;
   padding: 1rem;
   border: none;
   border-radius: 1rem;
